# ChatData

./: 404.html  CHANGELOG.md  README.en.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
design/mysql-user-runtime/: index.html
docs/: index.en.md  index.md
docs/design/: mysql-user-runtime.md
docs/getting-started/: mysql-basics.md
docs/operations/: mysql-runtime.md
getting-started/mysql-basics/: index.html
index.en/: index.html
operations/mysql-runtime/: index.html
search/: search_index.json
src/chatdata/: __init__.py  cli.py  config.py  mysql.py
tests/: test_cli.py  test_mysql.py  test_version.py
